# ortholang-demo

./: .gitignore  .gitmodules  Docs.cabal  Docs.hs  README.md  blastdbs.py  build.nix  builder.sh  client.html  client2.html  common-names.sh  default.nix  demo.nix  demo.py  detourrr-demo.py  docs.nix  docs2.nix  genomes.py  mockup.html  mockup2.html  ortholang  ortholang-demo.py  readme.md  reference.md  requirements.nix  requirements.txt  requirements_frozen.txt  server.py  service.nix  shortcut-demo.py  shortcut.py  shortcut_demo.py  stack.yaml  symlink-tmpfiles.sh  todo.txt
asciicasts/: asciicast  asciicast2gif.sh  shortcut-01-build.cast  shortcut-02-test.cast  shortcut-03-script.cast  shortcut-04-commands.cast  shortcut-05-sequences.cast  shortcut-06-sets.cast  shortcut-07-building.cast  tmux.conf  todo.txt
data/: blast02.cut  blastdbs.py  diatom.cut  fastas.json  green-ids.cut  green.cut  include.dtr  load01.cut  load02.cut  load03.cut  prs02.cut  tmp.cut  two-cyanos.txt  types01.cut
docs/: Docs.cabal  Docs.hs  default.nix  docs-generated.nix  docs.nix  functions_BLAST+.md  functions_BiomartR.md  functions_Busco.md  functions_Diamond.md  functions_GreenCut.md  functions_Load.md  functions_Math.md  functions_OrthoFinder.md  functions_Range.md  functions_Repeat.md  functions_Replace.md  functions_Scores.md  functions_Sets.md  functions_Summarize.md  stack.yaml
examples/: blast.cut  blast.rrr  blast01.cut  blast02.cut  blasthits.cut  diatom.cut  load01.cut  load02.cut  load03.cut  tutorial02.cut
nix/: requirements.nix  sources.json  sources.nix
scripts/: blastdbs.py  prefetch.py
static/: asciinema-player.css  asciinema-theme-github.css  hilitor.js  index.css  index.js  install.sh  pygments-theme.css  shortcut.xcf  skim-the-docs.xcf  tables.css  test.cast
templates/: asciicast.html  basics.md  blastdb-descriptions.txt  blastdbs.json  collab_guest.md  collaborate.md  comment.html  construction.html  controls.html  cookbook.md  data.md  demo.md  docs.html  example.html  examples.html  examples.md  functions.md  functions_01_test.md  functions_All-Vs-All.md  functions_BLAST+.md  functions_BiomartR.md  functions_BlastDB.md  functions_BlastHits.md  functions_BlastRBH.md  functions_Busco.md  functions_CRB-BLAST.md  functions_Diamond.md  functions_GreenCut.md  functions_HMMER.md  functions_ListLike.md  functions_MMSeqs.md  functions_MUSCLE.md  functions_OrthoFinder.md  functions_OrthoGroups.md  functions_Permute.md  functions_Plots.md  functions_PsiBLAST.md  functions_Range.md  functions_Sample.md  functions_SeqIO.md  (+46 more)
