name:               Docs
synopsis:           Partial automation for updating the shortcut-demo docs
author:             Jeffrey David Johnson
maintainer:         jefdaj@berkeley.edu
version:            0.1
license:            AGPL-3
license-file:       LICENSE
build-type:         Simple
cabal-version:      >=1.10
data-files:         shortcut/data/*.fa,
                    shortcut/data/*.faa,
                    shortcut/data/*.fna,
                    shortcut/data/*.gbk,
                    shortcut/data/*.txt,
                    shortcut/docs/*.txt,
                    shortcut/docs/modules/*.txt,
                    shortcut/docs/types/*.txt,
                    shortcut/docs/functions/*.txt,
                    shortcut/tests/check/*.sh,
                    shortcut/tests/versions/*.txt,
                    shortcut/tests/repl/*.txt,
                    shortcut/tests/scripts/*.cut,
                    shortcut/tests/stdout/*.txt,
                    shortcut/tests/tmpfiles/*.txt,
                    shortcut/wrapper-scripts/*.sh

executable docs
  main-is:          Docs.hs
  default-language: Haskell2010
  hs-source-dirs:   .,
                    shortcut
  build-depends:    ShortCut,
                    Glob,
                    MissingH,
                    ansi-terminal,
                    base,
                    bytestring,
                    concurrent-extra,
                    configurator,
                    containers,
                    cryptohash,
                    directory,
                    dlist,
                    docopt,
                    filelock,
                    filepath,
                    haskeline,
                    logging,
                    mtl,
                    parsec,
                    path,
                    path-io,
                    posix-escape,
                    pretty,
                    process,
                    random,
                    random-shuffle,
                    regex-compat,
                    regex-posix,
                    safe-exceptions,
                    scientific,
                    shake,
                    silently,
                    split,
                    strict,
                    tasty,
                    tasty-golden,
                    terminal-size,
                    text,
                    time,
                    transformers,
                    unix,
                    utility-ht
