name:               Docs
synopsis:           Partial automation for updating the ortholang-demo docs
author:             Jeffrey David Johnson
maintainer:         jefdaj@berkeley.edu
version:            0.1
license:            AGPL-3
license-file:       LICENSE
build-type:         Simple
cabal-version:      >=1.10
data-files:         ortholang/data/*.fa,
                    ortholang/data/*.faa,
                    ortholang/data/*.fna,
                    ortholang/data/*.gbk,
                    ortholang/data/*.txt,
                    ortholang/docs/*.txt,
                    ortholang/docs/modules/*.txt,
                    ortholang/docs/types/*.txt,
                    ortholang/docs/functions/*.txt,
                    ortholang/tests/check/*.sh,
                    ortholang/tests/versions/*.txt,
                    ortholang/tests/repl/*.txt,
                    ortholang/tests/scripts/*.cut,
                    ortholang/tests/stdout/*.txt,
                    ortholang/tests/tmpfiles/*.txt,
                    ortholang/wrapper-scripts/*.sh

executable docs
  main-is:          Docs.hs
  default-language: Haskell2010
  hs-source-dirs:   .,
                    ortholang
  build-depends:    OrthoLang,
                    Glob,
                    MissingH,
                    ansi-terminal,
                    base,
                    bytestring,
                    concurrent-extra,
                    configurator,
                    containers,
                    cryptohash,
                    directory,
                    dlist,
                    docopt,
                    filelock,
                    filepath,
                    haskeline,
                    logging,
                    mtl,
                    parsec,
                    path,
                    path-io,
                    posix-escape,
                    pretty,
                    process,
                    random,
                    random-shuffle,
                    regex-compat,
                    regex-posix,
                    safe-exceptions,
                    scientific,
                    shake,
                    silently,
                    split,
                    strict,
                    tasty,
                    tasty-golden,
                    terminal-size,
                    text,
                    time,
                    transformers,
                    unix,
                    utility-ht
