cabal-version:      2.2
name:               Docs
synopsis:           Partial automation for updating the ortholang-demo docs
author:             Jeffrey David Johnson
maintainer:         jefdaj@berkeley.edu
version:            0.1
-- license:            AGPL-3
-- license-file:       LICENSE
build-type:         Simple

-- TODO remove these and get from ortholang package instead
-- data-files:         ortholang/examples/scripts/*.ol,
--                     ortholang/examples/gene-lists/*.txt,
--                     ortholang/examples/genome-lists/*.txt,
--                     ortholang/examples/sequences/*.fa,
--                     ortholang/examples/sequences/*.faa,
--                     ortholang/examples/sequences/*.fna,
--                     ortholang/examples/sequences/*.gbff,
--                     ortholang/examples/sequences/*.gbk

executable docs
  main-is:          Docs.hs
  default-language: Haskell2010
  hs-source-dirs:   ., ortholang
  pkgconfig-depends: zlib
  build-depends:    OrthoLang,
                    Glob,
                    MissingH,
                    QuickCheck,
                    ansi-terminal,
                    base,
                    bytestring,
                    concurrent-extra,
                    configurator,
                    containers,
                    cryptohash,
                    data-default-class,
                    directory,
                    dlist,
                    -- docopt,
                    download,
                    filelock,
                    filepath,
                    haskeline,
                    hspec,
                    logging,
                    mtl,
                    neat-interpolation,
                    parsec,
                    path,
                    path-io,
                    posix-escape,
                    pretty,
                    process,
                    progress-meter,
                    random,
                    random-shuffle,
                    raw-strings-qq,
                    regex-compat,
                    regex-posix,
                    retry,
                    safe-exceptions,
                    scientific,
                    setlocale,
                    shake >= 0.17.5,
                    silently,
                    split,
                    strict,
                    tasty,
                    tasty-golden,
                    tasty-hspec,
                    tasty-hunit,
                    tasty-quickcheck,
                    temporary,
                    terminal-size,
                    text,
                    time,
                    transformers,
                    unbounded-delays,
                    unix,
                    utility-ht
                    -- zlib
